2004-09-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenu.c (MenuWorldChanged): ensure that we recompute
	the menu geometry on WorldChanged to handle font size
	changes. [Bug 607649]

2004-09-16  Peter Spjuth  <peter.spjuth@space.se>

	* tests/place.test:
	* generic/tkPlace.c: Fixed a memory leak when a placed widget was
	forgotten. [Bug 1028888]

2004-09-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (ReadIconFromFile): fix mem alloc to get the right
	size for both icons ('?:' order of precedence mistake).

2004-09-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/tkfbox.tcl (::tk::dialog::file::): Make sure that the
	state is reset properly when starting to run the dialog. [Bug 845189]

	* library/demos/filebox.tcl: Stop the use of tk_strictMotif from
	poisoning the rest of the widget demo. [Bug 1013942]

2004-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (ActivateWindow): SetFocus to grab window when
	clicking outside the grab window hierarchy. [Bug 220908]
	(UpdateWrapper): update to Kovalenko to account for whether the
	override window has a transient parent, and apply WS_POPUP in the
	correct case.  The makes splash screens pop up as well as making
	dropdowns not grab focus away from the parent.

2004-09-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c: backport of several items from 8.5 head:
	(ReadIconFromFile): when using SHGetFileInfo to retrieve icon, get
	regular icon as well for correct Alt-Tab icon. (hobbs)
	Fix for #742882 "Potential division by zero in gridded wm
	geometry" (jenglish)
	(UpdateWrapper): Let overrideredirect'ed window's wrapper be the
	child of desktop window, thus making it to behave more similarly
	to X11 Override Redirect. Esp. useful for combobox-like
	megawidgets. (kovalenko)
	(InstallColormaps): Check for TK_ALREADY_DEAD to avoid handling of
	dead windows. (kovalenko)
	Change 'panic' to 'Tcl_Panic' (davygrvy)

2004-09-06  Jeff Hobbs  <jeffh@ActiveState.com>
